name:                yuntan-cart
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/yuntan-user#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cart
                     , Cart.Types
                     , Cart.DataSource
                     , Cart.DataSource.Cart
                     , Cart.DataSource.Order
                     , Cart.DataSource.Table
                     , Cart.API

                     , Cart.APIHandler
                     , Cart.Config
  build-depends:       base >= 4.7 && < 5
                     , unix-time
                     , text
                     , mysql-simple
                     , hashable
                     , scotty
                     , haxl
                     , resource-pool
                     , async
                     , bytestring
                     , mtl
                     , aeson
                     , http-types
                     , cryptohash
                     , hex

                     , yuntan-common
  default-language:    Haskell2010

executable yuntan-cart
  hs-source-dirs:      app
  main-is:             API.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yuntan-cart
                     , optparse-applicative
                     , scotty
                     , haxl
                     , warp
                     , streaming-commons
                     , wai-extra
                     , data-default-class
                     , yaml
                     , text
                     , yuntan-common
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-user
